--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.0.0",
-    "@genkit-ai/next": "^1.0.0",
+    "@genkit-ai/google-genai": "0.5.12",
+    "@genkit-ai/next": "1.20.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -49,7 +49,7 @@
     "genkit": "^1.0.0",
     "idb": "^8.0.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "^15.0.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-day-picker": "^9.11.3",
@@ -61,7 +61,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.x",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "genkit-cli": "^1.0.0",
