--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "0.5.12",
-    "@genkit-ai/next": "1.20.0",
+    "@genkit-ai/google-genai": "^1.26.0",
+    "@genkit-ai/next": "^1.26.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -46,7 +46,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.0.0",
+    "genkit": "^1.26.0",
     "idb": "^8.0.0",
     "lucide-react": "^0.475.0",
     "next": "^15.0.0",
