--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-day-picker": "^9.11.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^6.27.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -64,6 +65,7 @@
     "@types/node": "20.x",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
