--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "firebase": "^11.9.1",
     "genkit": "^1.26.0",
     "idb": "^8.0.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "next": "^15.0.0",
     "patch-package": "^8.0.0",
