--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "idb": "^8.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
+    "luxon": "^3.4.4",
     "next": "^15.0.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
@@ -63,6 +64,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "20.x",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
