--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^11.3.19",
     "genkit": "^1.26.0",
     "idb": "^8.0.0",
     "jszip": "^3.10.1",
