--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.0",
     "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
