--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
     "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "lint": "next lint || true",
+    "typecheck": "tsc --noEmit",
+    "test:e2e": "playwright test",
+    "test:unit": "vitest run --config vitest.config.ts"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.26.0",
@@ -70,11 +72,13 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-router-dom": "^5.3.3",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.0",
+    "@playwright/test": "^1.51.1",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.0",
     "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "vitest": "^2.1.8",
     "typescript": "^5"
   },
   "overrides": {
