--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
     "@types/luxon": "^3.4.2",
     "@types/node": "20.x",
     "@types/react": "18.2.0",
