Fix residents auth session handling

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint || true",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -48,6 +48,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.19",
     "genkit": "^1.26.0",
+    "global-agent": "^3.0.0",
     "idb": "^8.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
@@ -71,9 +72,10 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-router-dom": "^5.3.3",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.0",
     "genkit-cli": "^1.0.0",
+    "playwright": "^1.57.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
